[package]
name = "DPXRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
nalgebra = "0.32.3"
pdbtbx = "0.11.0"
polars = "0.37.0"
rust-sasa = "0.1.1"
